--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.14.0)
-project(myPing LANGUAGES C)
+project(MyPing LANGUAGES C)
 
-add_compile_options(-Werror)
+add_compile_options(-Werror -Wall)
 
-file(GLOB myPing_src "src/*.c")
-add_executable(myPing ${myPing_src})
-target_include_directories(myPing PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+file(GLOB MyPing_src "src/*.c")
+add_executable(MyPing ${MyPing_src})
+target_include_directories(MyPing PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
